--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -1,7 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PHEZ Quiz"
+            android:layout_marginTop="10dp"
+            android:textSize="30sp"
+            android:layout_centerHorizontal="true"/>
+
+        <Button
+            android:id="@+id/btnQuiz"
+            android:textSize="20sp"
+            android:text="All"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:onClick="onClick"
+            android:layout_marginTop="50dp"
+            android:layout_centerHorizontal="true"
+            />
+
+    </LinearLayout>
+
+
+</ScrollView>
