--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -41,7 +41,7 @@
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_insert_emoticon_black_24dp"
+                    android:src="@drawable/a042_physics_4"
                     android:padding="10dp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_insert_emoticon_black_24dp"
+                    android:src="@drawable/a026_hypotenuse"
                     android:padding="10dp"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,7 +106,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/a034_pendulum_1"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -134,7 +134,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/a032_motion_1"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -171,7 +171,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/a004_pendulum"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -218,7 +218,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/a011_atom"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -246,7 +246,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/a_temperature"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -292,7 +292,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/a_power"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -317,11 +317,12 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:gravity="center">
+
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
-                        android:padding="10dp"/>
+                        android:padding="10dp"
+                        android:src="@drawable/a019_electrical_circuit" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -357,7 +358,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/magnetic"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -385,7 +386,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/ic_insert_emoticon_black_24dp"
+                        android:src="@drawable/electric_magnetic"
                         android:padding="10dp"/>
                     <TextView
                         android:layout_width="wrap_content"
