--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,4 +5,9 @@
     android:orientation="vertical">
 
 
+    <Button
+        android:id="@+id/formulaBTN"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Формулы" />
 </LinearLayout>
