--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListActivity"
-    android:orientation="vertical">
+    tools:context=".ListActivity">
+
+
+
+
 
     <ListView
         android:id="@+id/lvThemeList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </ListView>
 
+    <Button
+        android:id="@+id/formulaThemeBTN"
+        android:layout_alignParentBottom="true"
+        android:padding="10dp"
+        android:text="Формулы"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 
 
 
-    </LinearLayout>
+
+    </RelativeLayout>
 
