--- a/app/src/main/res/layout/formula_item.xml
+++ b/app/src/main/res/layout/formula_item.xml
@@ -1,40 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:orientation="horizontal">
 
 
-    <com.nishant.math.MathView
+    <ImageView
         android:id="@+id/formula_math"
         android:layout_width="170dp"
-        android:layout_alignParentStart="true"
         android:layout_height="match_parent"
-        android:layout_gravity="start"/>
+        android:layout_alignParentStart="true"
+        android:layout_gravity="start" />
 
 
+    <TextView
+        android:id="@+id/formula_definition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/formula_math"
+        android:textColor="@android:color/background_dark"
+        android:textSize="17sp" />
 
-
-        <TextView
-
-            android:layout_toEndOf="@+id/formula_math"
-            android:id="@+id/formula_definition"
-            android:textColor="@android:color/background_dark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"/>
-        <TextView
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:textSize="12sp"
-            android:layout_marginEnd="10dp"
-            android:id="@+id/formula_theme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-
+    <TextView
+        android:id="@+id/formula_theme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="10dp"
+        android:textSize="12sp" />
 
 
 </RelativeLayout>
