--- a/app/src/main/res/layout/formula_item.xml
+++ b/app/src/main/res/layout/formula_item.xml
@@ -6,6 +6,7 @@
 
 
     <ImageView
+        android:padding="3dp"
         android:id="@+id/formula_math"
         android:layout_width="170dp"
         android:layout_height="match_parent"
@@ -14,6 +15,7 @@
 
 
     <TextView
+        android:padding="5dp"
         android:id="@+id/formula_definition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
