--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -10,9 +10,11 @@
         android:orientation="vertical"
         android:padding="10dp"
         android:layout_gravity="top"
-        android:id="@+id/ll">
+        android:id="@+id/ll"
+        android:background="?attr/backgroundcolor">
 
         <TextView
+            android:textColor="?attr/textcolor"
             android:layout_gravity="top"
             android:gravity="center"
             android:text="Механика"
@@ -28,12 +30,14 @@
 
         <android.support.v7.widget.CardView
             android:foreground="?android:attr/selectableItemBackground"
+
             android:clickable="true"
             android:id="@+id/kinematicsId"
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_margin="10dp">
             <LinearLayout
+                android:background="?attr/cardbackgroundcolor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -44,6 +48,7 @@
                     android:src="@drawable/a042_physics_4"
                     android:padding="10dp"/>
                 <TextView
+                    android:textColor="?attr/textcolor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
@@ -62,6 +67,7 @@
             android:layout_height="160dp"
             android:layout_margin="10dp">
             <LinearLayout
+                android:background="?attr/cardbackgroundcolor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -99,6 +105,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -126,23 +133,27 @@
                 android:layout_width="160dp"
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
+
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
+
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/a032_motion_1"
-                        android:padding="10dp"/>
+                        android:padding="10dp"
+                        android:src="@drawable/a032_motion_1" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:textSize="15sp"
                         android:layout_marginTop="10dp"
-                        android:text="Статика"/>
+                        android:text="Статика"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
@@ -164,6 +175,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -211,6 +223,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -239,6 +252,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -285,6 +299,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -313,6 +328,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -351,6 +367,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -379,6 +396,7 @@
                 android:layout_height="160dp"
                 android:layout_margin="10dp">
                 <LinearLayout
+                    android:background="?attr/cardbackgroundcolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
