--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?attr/backgroundcolor">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?attr/backgroundcolor">
 
         <TextView
+            android:textColor="?attr/textcolor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -36,6 +39,8 @@
             android:orientation="horizontal">
 
             <Button
+                android:backgroundTint="?attr/buttoncolor"
+                android:textColor="?attr/textcolor"
                 android:id="@+id/formulaBTN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -44,6 +49,8 @@
                 android:textSize="20sp" />
 
             <Button
+                android:backgroundTint="?attr/buttoncolor"
+                android:textColor="?attr/textcolor"
                 android:id="@+id/settingsBTN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,4 +59,4 @@
                 android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
