--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?attr/backgroundcolor">
 
 
         <android.support.v7.widget.CardView
@@ -19,12 +20,13 @@
 
 
             <LinearLayout
-
+                android:background="?attr/cardbackgroundcolor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
+                    android:textColor="?attr/textcolor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
@@ -129,12 +131,13 @@
 
 
             <LinearLayout
-
+                android:background="?attr/cardbackgroundcolor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
+                    android:textColor="?attr/textcolor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
@@ -153,7 +156,8 @@
                         android:layout_height="wrap_content"
                         android:clipToPadding="false"
                         android:gravity="center"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        >
 
                         <android.support.v7.widget.CardView
                             android:id="@+id/QuizDynamics1"
@@ -239,12 +243,13 @@
 
 
             <LinearLayout
-
+                android:background="?attr/cardbackgroundcolor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
+                    android:textColor="?attr/textcolor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
@@ -349,12 +354,13 @@
 
 
             <LinearLayout
-
+                android:background="?attr/cardbackgroundcolor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
+                    android:textColor="?attr/textcolor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
@@ -459,12 +465,13 @@
 
 
             <LinearLayout
-
+                android:background="?attr/cardbackgroundcolor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
+                    android:textColor="?attr/textcolor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
