--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,44 @@
 <resources>
 
+
     <!-- Base application theme. -->
+    <!-- LightTheme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundcolor">@color/backgroundcolorLight</item>
+        <item name="cardbackgroundcolor">@color/cardbackgroundcolorLight</item>
+        <item name="textcolor">@color/textcolorLight</item>
+        <item name="tintcolor">@color/colorAccent</item>
+        <item name="buttoncolor">@color/colorAccent</item>
+        <item name="android:windowAnimationStyle" >@style/WindowAnimationTransition</item>
     </style>
 
-    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
+
+
+    <style name="darkTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryNight</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkNight</item>
+        <item name="colorAccent">@color/colorAccentNight</item>
+        <item name="backgroundcolor">@color/backgroundcolorNight</item>
+        <item name="cardbackgroundcolor">@color/cardbackgroundcolorNight</item>
+        <item name="textcolor">@color/textcolorNight</item>
+        <item name="tintcolor">@color/textcolorNight</item>
+        <item name="buttoncolor">@color/buttoncolorNight</item>
+        <item name="android:windowAnimationStyle" >@style/WindowAnimationTransition</item>
     </style>
+    
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation" >@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation" >@android:anim/fade_out</item>
+
+    </style>
+    
+
+
 
 
 
