--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -5,12 +5,14 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="10dp"
-    android:id="@+id/item_book">
+    android:id="@+id/item_book"
+    android:background="?attr/backgroundcolor">
 
 
 
 
     <TextView
+        android:textColor="?attr/textcolor"
         android:id="@+id/txt_theme"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
