--- a/app/src/main/res/layout/activity_quiz3.xml
+++ b/app/src/main/res/layout/activity_quiz3.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".QuizActivity">
+    tools:context=".QuizActivity"
+    android:background="?attr/backgroundcolor">
     <TextView
         android:id="@+id/numQ"
         android:layout_width="match_parent"
