--- a/app/src/main/res/layout/activity_quiz3.xml
+++ b/app/src/main/res/layout/activity_quiz3.xml
@@ -7,6 +7,7 @@
     tools:context=".QuizActivity"
     android:background="?attr/backgroundcolor">
     <TextView
+        android:textColor="?attr/textcolor"
         android:id="@+id/numQ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
         android:textSize="40sp" />
 
     <TextView
+        android:textColor="?attr/textcolor"
         android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +28,7 @@
         android:layout_below="@+id/numQ"/>
 
     <EditText
+        android:textColor="?attr/textcolor"
         android:id="@+id/answer"
         android:layout_width="250dp"
         android:layout_height="50dp"
