--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:orientation="horizontal"
     android:layout_marginTop="10dp"
     android:id="@+id/item_book"
@@ -16,7 +16,7 @@
         android:id="@+id/txt_theme"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="30sp" />
+        android:textSize="25sp" />
 
 
 
