--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="cardbackgroundcolorLight">#ffffff</color>
     <color name="textcolorLight">#000000</color>
     <color name="tintcolorLight">#000000</color>
-    <color name="buttoncolorLight">#ffffff</color>
+    <color name="buttoncolorLight">#89CFF9</color>
 
 
     <color name="colorPrimaryNight">#263238</color>
