--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <android.support.design.widget.TabLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/buttoncolor"
         app:tabMode="fixed"
         app:tabGravity="fill"
         app:tabIndicatorColor="?attr/colorAccent"
