--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
                 android:backgroundTint="?attr/buttoncolor"
                 android:textColor="?attr/textcolor"
                 android:id="@+id/formulaBTN"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Формулы"
@@ -52,7 +52,7 @@
                 android:backgroundTint="?attr/buttoncolor"
                 android:textColor="?attr/textcolor"
                 android:id="@+id/settingsBTN"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Настройки"
