--- a/app/src/main/res/layout/activity_formula.xml
+++ b/app/src/main/res/layout/activity_formula.xml
@@ -11,10 +11,12 @@
 
 
     <ListView
-
+        android:divider="@android:color/transparent"
+        android:dividerHeight="8dp"
         android:id="@+id/formula_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
 
 </LinearLayout>
