--- a/app/src/main/res/layout/formula_item.xml
+++ b/app/src/main/res/layout/formula_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:orientation="horizontal"
     android:background="?attr/cardbackgroundcolor">
+
 
 
     <ImageView
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/formula_math"
         android:textColor="?attr/textcolor"
-        android:textSize="17sp" />
+        android:textSize="16sp" />
 
     <TextView
         android:textColor="?attr/textcolor"
@@ -33,8 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:gravity="bottom"
         android:layout_marginEnd="10dp"
-        android:textSize="12sp" />
+        android:textSize="10sp" />
 
 
 </RelativeLayout>
