--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -12,6 +12,15 @@
         android:orientation="vertical"
         android:background="?attr/backgroundcolor">
 
+        <TextView
+            android:textColor="?attr/textcolor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="30sp"
+            android:text="Задания"/>
+
+
 
         <android.support.v7.widget.CardView
             android:gravity="center"
